syntax="proto3";
option java_package = "com.rams.proto.data";
option java_multiple_files = true;
service HService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string name = 1;
}